--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp">
+    android:padding="16dp"
+    android:background="@drawable/background">
 
     <RatingBar
         android:id="@+id/ratingBar"
@@ -12,6 +13,7 @@
         android:stepSize="1"/>
 
     <TextView
+        style="@style/question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/resultScreen"/>
