--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,13 +12,13 @@
 
     <style name="question">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:layout_marginBottom">8dp</item>
     </style>
 
     <style name="answer">
         <item name="android:textSize">12sp</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
 </resources>
